<resources>
    <string name="app_name">shopping-cart</string>
    <string name="shopping_cart_loading">Einkaufswagen</string>
    <string name="logo_description">Logo der App</string>
    <string name="shopping_lists_headline">Einkaufswägen:</string>
    <string name="share_button_text">Teilen</string>
    <string name="new_shopping_list">Neuen Einkaufswagen anlegen</string>
    <string name="cart_name">Weihnachtsessen</string>
    <string name="create_new_cart">Neuer Einkaufswagen:</string>
    <string name="add_new_product">Neues Produkt hinzufügen</string>
    <string name="save_and_back">Speichern und zurück</string>
    <string name="product_name">Produktname</string>
    <string name="weight">Gewicht/Anzahl</string>
    <string name="milk">Milch</string>
    <string name="ok">OK</string>
    <string name="back">ZURÜCK</string>
    <string name="delete">Löschen</string>
    <string name="checked">Abgehakt</string>
    <string name="delete_button_desc">Löschen button</string>
    <string name="show_old_products">Bereits gekaufte Artikel anzeigen</string>
    <string name="all_information_needed">Bitte füllen Sie alle Felder aus</string>
    <string name="select_unit">Einheit wählen…</string>
    <string name="error">Error</string>
    <string name="abort">Abbrechen</string>
    <string name="old_products_headline">Bereits gekaufte Artikel:</string>
    <string name="ten">10</string>
    <string-array name="unit_array">
        <item>Einheit wählen…</item>
        <item>Kilogramm</item>
        <item>Gramm</item>
        <item>Stück</item>
        <item>Liter</item>
        <item>Milliliter</item>
    </string-array>
</resources>