<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.NewCartActivity">

    <TextView
        android:id="@+id/cart_headline"
        android:layout_width="335dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:text="@string/create_new_cart"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cart_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/cart_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_headline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productRecyclerView"
        android:layout_width="357dp"
        android:layout_height="302dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_name_input" />

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/add_new_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productRecyclerView" />

    <Button
        android:id="@+id/open_product_list_button"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/show_old_products"
        app:layout_constraintBottom_toTopOf="@+id/save_and_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toEndOf="@+id/add_product_button"
        app:layout_constraintTop_toBottomOf="@+id/productRecyclerView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/save_and_back_button"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/save_and_back"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_product_button" />

    <Button
        android:id="@+id/abort_button"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/abort"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/save_and_back_button"
        app:layout_constraintTop_toBottomOf="@+id/open_product_list_button" />
</androidx.constraintlayout.widget.ConstraintLayout>